# PPF

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: bayesian_inference.rs  demo.rs  infer_mean_and_variance.rs  infer_mean_variance_invgamma.rs
src/: distributions.rs  lib.rs  model.rs  samplers.rs  samples.rs
tests/: distributions.rs  integration.rs
