[package]
name = "ppf"
version = "0.1.0"
authors = ["Mazen Ali <mazen.ali90@gmail.com>"]
edition = "2024"
description = "A small probabilistic programming library in Rust"
license = "MIT"
repository = "https://github.com/MazenAli/PPF"
documentation = "https://github.com/MazenAli/PPF"
homepage = "https://github.com/MazenAli/PPF"


[dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
